--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Tienda en linea</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    </head>
     <body>
-        <h1>Pagina inicial</h1>
-        <p>Esta es la primera pagina del curso WEB y Patrones...</p>
+        <a href="ejemplo9.html"> Back </a> /
+        <a href="index.html">Home</a> /
+        <a href="ejemplo2.html">Next</a><br>
+        <div>
+            <h1 style="text-align: center">Home</h1>
+            <p>Bienvenido a la pagina de la Tienda en Linea...</p>
+        </div>
+
+        <p style="text-align: left">Lorem ipsum dolor sit amet consectetur adipiscing elit habitant, nulla posuere ultrices urna auctor rhoncus. Magnis porta curabitur auctor dignissim erat, dictum aptent neque senectus risus, aliquam taciti purus ullamcorper.</p>
+        <p style="text-align: right">Integer elementum lacinia sapien id non dictum porta fames fusce, suspendisse metus iaculis conubia nulla viverra risus a volutpat proin, vestibulum tempor mi pharetra egestas nunc hac semper. Sagittis tellus donec urna cum ullamcorper nam maecenas tempus quam primis, aenean massa bibendum nulla fames tempor posuere mi purus, faucibus vulputate dictumst eros dapibus nunc class nisl ultricies. Feugiat luctus sed curabitur dictumst pellentesque faucibus dictum sapien donec, tempus rutrum ut pharetra laoreet duis inceptos mattis, velit montes dui lectus nascetur maecenas nostra augue.</p>
+        <p style="text-align: center">Mi donec accumsan nunc dapibus integer ultrices malesuada porttitor habitasse, tempus neque aliquet morbi fringilla quis hendrerit eu, est suspendisse massa id bibendum per et luctus. At convallis penatibus arcu quis lobortis non nulla placerat dui, feugiat turpis ridiculus integer elementum nostra himenaeos praesent cras, nec pellentesque cubilia sociis sociosqu mollis mus felis. Magna cursus varius velit sodales litora facilisi, auctor nam sagittis eu facilisis posuere, vitae luctus dui dapibus habitasse.</p>
+
+        <br>
+        <br>
+        
+        <p>Ultima linea</p>
     </body>
 </html>
